Fixing waybar Alignment issues

--- a/Configs/.config/waybar/modules/style.css
+++ b/Configs/.config/waybar/modules/style.css
@@ -1,7 +1,7 @@
 * {
     border: none;
     border-radius: 0px;
-    font-family: "JetBrainsMono Nerd Font";
+    font-family: "Noto Sans, Symbols Nerd Font";
     font-weight: bold;
     font-size: ${s_fontpx}px;
     min-height: 10px;
